--- a/Setup/ToDo.txt
+++ b/Setup/ToDo.txt
@@ -6,3 +6,5 @@ Filter by keywords in diff lines #2444
 Vertical selection/highlighting? // Idea for graph
 Bug with "Show remotes" in context menu check box always remains on
 Prevent selecting "negative" amount of time in Ctrl+F
+Context menu structure with Diff/ (File tree)
+Test: play with checking out different branches and correct slection remaining (sometimes strange scrolling occurs)
