--- a/ToDo.txt
+++ b/ToDo.txt
@@ -16,3 +16,4 @@ Bug: in case of font increase background picture for branch name in the graph is
 Add animation playing while diff is loading
 What is interactive add in context menu in commit window?
 FEATURE (may be on git level): stash file-name
+Add branch renaming to the tree
