--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,4 +1,3 @@
-Bug in Settings with label being too long
 Maybe add showing commit hash in Browse view (#2981)
 Add file tree context menu for index and unstaged
 Make adding stash comments more intuitive and easier to notice
@@ -17,3 +16,4 @@ Add animation playing while diff is loading
 What is interactive add in context menu in commit window?
 FEATURE (may be on git level): stash file-name
 Add branch renaming to the tree
+TREE styles: 1)like in source-tree 2)ancestor left to right
